update auto/man created ini files (mame0279)
from awk script

--- a/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
@@ -66,6 +66,8 @@ mc_tv200
 megapad
 mgt20in1
 miwi2_7
+mpntball
+mpntbalt
 mylpony
 mysprtch
 mysprtcp
@@ -109,12 +111,16 @@ timetp36
 tmntmutm
 tmntpdc
 tomcpin
+typo240
 unk1682
 vgcaplet
 vgpmini
 vgpocket
 vgtablet
+vjpp1
 vjpp2
+vjpp3
+vjpp4
 vsplus
 wfmotor
 whacmole
