--- a/00-databases-00/sorted_info_creation/0XXX/neogeo.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/neogeo.ini
@@ -34,21 +34,10 @@ ct2k3sp
 cthd2003
 ctomaday
 cyberlip
-ddragon1
-ddragon1_p1
-ddragon1_p2
 diggerma
 doubledr
 dragonsh
 eightman
-etyphoon
-etyphoon_a
-etyphoon_b1
-etyphoon_b2
-etyphoon_b3
-etyphoon_b4
-etyphoon_b5
-etyphoon_b6
 fatfursp
 fatfurspa
 fatfury1
@@ -68,8 +57,6 @@ garouh
 garouha
 garoup
 ghostlop
-gladmort
-gladmort_d1
 goalx3
 gowcaizr
 gpilots
@@ -92,10 +79,12 @@ kf2k2pla
 kf2k2pls
 kf2k3bl
 kf2k3bla
+kf2k3pcb
 kf2k3pl
 kf2k3upl
 kf2k5uni
 kizuna
+kizuna4p
 kof10th
 kof2000
 kof2000n
@@ -143,8 +132,6 @@ lasthope
 lastsold
 lbowling
 legendos
-looptris
-looptrsp
 lresort
 lresortp
 magdrop2
@@ -159,9 +146,11 @@ miexchng
 minasan
 moshougi
 ms4plus
+ms5pcb
 ms5plus
 mslug
 mslug2
+mslug2t
 mslug3
 mslug3a
 mslug3b6
@@ -173,8 +162,8 @@ mslug5b
 mslug5h
 mslugx
 mutnat
+mvstemp
 nam1975
-nblktiger
 ncombat
 ncombath
 ncommand
@@ -182,7 +171,8 @@ neobombe
 neocup98
 neodrift
 neomrdo
-neotris
+ng_mv2f
+ng_mv4f
 ninjamas
 nitd
 nitdbl
@@ -265,12 +255,13 @@ strhoop
 superspy
 svc
 svcboot
+svcpcb
+svcpcba
 svcplus
 svcplusa
 svcsplus
 tophuntr
 tophuntrh
-totc
 tpgolf
 trally
 turfmast
@@ -278,6 +269,11 @@ twinspri
 twsoc96
 viewpoin
 viewpoinp
+vliner
+vliner53
+vliner54
+vliner6e
+vliner7e
 wakuwak7
 wh1
 wh1h
@@ -287,7 +283,6 @@ wh2h
 wh2j
 whp
 wjammers
-xenocris
 zedblade
 zintrckb
 zupapa
