--- a/00-databases-00/sorted_info_creation/0XXX/playchoice10.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/playchoice10.ini
@@ -1,6 +1,7 @@
 pc_1942
 pc_bball
 pc_bfght
+pc_bload
 pc_bstar
 pc_cntra
 pc_cshwk
@@ -14,6 +15,7 @@ pc_ftqst
 pc_gntlt
 pc_golf
 pc_goons
+pc_grdue
 pc_grdus
 pc_hgaly
 pc_kngfu
@@ -48,6 +50,7 @@ pc_tmnt2
 pc_trjan
 pc_ttoon
 pc_vball
+pc_virus
 pc_wcup
 pc_wgnmn
 pc_ynoid
