--- a/00-databases-00/sorted_info_creation/0XXX/samples.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/samples.ini
@@ -1,79 +1,312 @@
 005
+005a
 3bagfull
+3bagfullnz
+3bagfullu
+86lions
+abattle
+abattle2
+acombat
+acombat3
+acombat4
+acombato
+afire
+alieninv
+alieninvp2
+andromed
+arcwins
+asterion
 astrof
-battles
-bbc
+astrof2
+astrof3
+astroff
+astroff2
+astroft
+autmoon
+ballbomb
+bbcb
+bbcbp
+bbcm
+bbcmc
+blasto
+blkrhino
 blockade
 bowl3d
 buckrog
+buckrogn
+buckrogn2
+bullfgtr
 carnival
+carnivalb
+carnivalc
+carnivalca
+carnivalh
+carnivalha
+carnivalmm
+cgold
+cgold2
 circus
+circuso
+clkwise
 clowns
+clowns1
+comotion
 congo
+congoa
+coralr2
 cosmica
+cosmica1
+cosmica22
+cosmica23
+cosmica2a
+cosmicbat
 cosmicg
+cosmicgi
+cosmicin
+cosmicm2
+cosmicmo
+cosmo
 crash
+crasha
 dai3wksi
+darthvdr
+dblagent
 depthch
+depthcho
+desterth
+dngrtrck
+eforest
 equites
-fantasy
-fruitsamples
-ftaerobi
+equitess
+escmars
+fantasyu
+ffortune
+fhunter
+futspy
+fvrpitch
+galaga3
+galaga3a
+galaga3b
+galaga3c
+galaga3m
+galmonst
+galxwars
+gambler
 gaplus
-genpin
+gaplusa
+gaplusd
+gapluse
+gaplust
+gekisou
+gldnpkr
 gmissile
+goldenc
+gotya
+greenber
+grescue
 gridlee
-homerun
-ifslots
-invaders
+grnlizrd
+gtroppo
+gunnrose
+headoni
+hustle
+hvoltage
+indianbt
+invader4
+invaderl
+invadernc
+invadersem
+invadpt2
+invadrmr
+invasion
+invasiona
+invasiona2
+invasionb
+invasionrz
+invasionrza
+invds
+invho2
 invinco
 ipminvad
+ipminvad1
 journey
+jspecter
+jspecter2
+kamikaze
+kgbird
+kouyakyu
 kst25
 ktmnt2
 ktopgun2
+letsgof
 lrescue
+lrescueabl
+lrescuem
+lrescuem2
 lupin3
+lupin3a
 m4
-midiverb
-MM1_keyboard
+mineswpr
+mlander
 mmagic
-moepro88
-moepro90
-moepro
 monsterb
-mpsaikyo
-mptennis
+monsterb2
+myqbert
 natodef
+natodefa
+nhomerun
+nrallyx
 nsub
+nsubc
 ozmawars
+ozmawars2
+ozmawarsmr
 panic
+panic2
+panic3
+panic4
+panicger
+panich
 phantom2
+phantomp
 ptrmj
 pulsar
 qbert
+qberta
+qbertj
+qbertqub
+qberttst
+qbtrktst
 rallyx
+rallyxa
+rallyxeg
+rallyxm
+rallyxmr
+redbird
 redclash
-relay
+redclashs
+redclasht
+redclashta
+resclunar
 ripcord
 robotbwl
+rollingc
+rotaryf
+runaways
 safarir
-samples
+safarirj
 sasuke
+sasukea
+satansat
+searthie
+searthin
+searthina
+searthinc
 seawolf
+seawolf2
+seawolfa
+seawolfo
 sharkatt
-smoepro
+shuttlei
+sicv
+sicv1
+sidetrac
+sinvemag
+sinvemag2
+sinvzen
+sisv
+sisv1
+sisv2
+sisv3
+sitv
+sitv1
+skychut
+skylove
+smash
+solfight
+spacbeam
+spaceat2
+spaceatt
+spaceatt2k
+spaceattbp
+spacebrd
+spacecom
+spacedem
 spacefb
+spacefba
+spacefbb
+spacefbe
+spacefbe2
+spacefbg
+spaceg
+spaceint
 spaceod
+spaceod2
+spaceph
+spacerng
+spacewr3
+spcebttl
+spceking
+spcewarl
+spcewarla
+spcewars
+spcking2
+spectar
+splndrbt
+splndrbt2
+springbd
+sqbert
+sstarbtl
+sstrangr
+starwarr
+steelwkr
+strfight
+subhunt
 subroc3d
+super80
+superinv
+supinvsion
+swipeout
+swtht2nz
+szaxxon
 targ
+targc
 tattack
-terao
+teqsun
 thehand
 thief
+thundhrt
+tiptop
+topgear
+trapeze
 triplhnt
+trktreat
+tst_invd
 turbo
+turboa
+turbob
+turbobl
+turboc
+turbod
+turboe
 twotiger
+twotigerc
+ultrainv
 vanguard
+vanguardc
+vanguardg
+vanguardj
+verbena
+warp1
+wildone
+wtiger
+yosakdon
 zaxxon
+zaxxon2
+zaxxon3
+zaxxonb
+zaxxonj
 zerohour
+zerohoura
+zerohouri
+zoom909
