--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -182,6 +182,7 @@ arcadian
 argus
 arian
 ark1ball
+arkaboot
 arkangc
 arkangc2
 arkanoid
@@ -245,7 +246,6 @@ asuka
 asukaj
 asukaja
 asylum
-atamanot
 ataqandr
 atetrisc
 atetrisc2
@@ -853,6 +853,7 @@ dogosoke
 dogyuun
 dogyuuna
 dogyuunb
+dogyuunbl
 dogyuunt
 dogyuunto
 dommy
@@ -882,6 +883,7 @@ drivfrcg
 drivfrcp
 drivfrcsg
 drivfrcsga
+drivfrcsgb
 drivfrct
 drktnjr
 drmicro
@@ -1892,9 +1894,13 @@ mv1sfx
 mv1sfx2
 mv1sfxa
 mx5000
+mygalag
+mygalaga
 mympac
 mypac
+mypaca
 myqbert
+mysinv
 mystston
 myststono
 myststonoi
@@ -3089,6 +3095,7 @@ unclepoo
 undefeat
 uniwars
 uniwarsa
+unkalba
 unkhorse
 unkzilec
 upndown
