update auto/man created ini files (mame0280)
created with awk

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -836,6 +836,7 @@ dkongjrj
 dkongjrm
 dkongjrmc
 dkongjrpb
+dkongjrv
 dkongo
 dkongpe
 dkongx
@@ -1564,6 +1565,7 @@ kikikai
 kingball
 kingballj
 kingdmgp
+kingdmgpbl
 kingofb
 kingofbj
 knightb
@@ -1854,6 +1856,7 @@ mspacmab
 mspacmab2
 mspacmab3
 mspacmab4
+mspacmab5
 mspacman
 mspacmanbcc
 mspacmanbco
@@ -1987,6 +1990,7 @@ overdriva
 overdrivb
 ozmawars
 ozmawars2
+ozmawars3
 ozmawarsmr
 ozon1
 p911
@@ -2305,6 +2309,7 @@ raiders
 raidersr3
 rallybik
 rallyxeg
+rallyxtd
 raphero
 rapheroa
 rayforce
@@ -2542,6 +2547,7 @@ scyclone
 sdtennis
 sdungeon
 sdungeona
+seainv
 searchar
 searcharj
 searcharu
@@ -3076,6 +3082,7 @@ turpinnv
 turpins
 turtles
 tutankhm
+tutankhmb
 tutankhms
 tvgm8080
 twinbee
