--- a/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
@@ -235,8 +235,8 @@ atm
 atmtb2
 atmtb2plus
 atom
-atombb
-atomeb
+atombbc
+atomrr
 atturbo
 aubam12s2
 aussieby
@@ -553,7 +553,6 @@ cyclshtg
 d64plus
 daisy
 dawg
-dcat16
 deathcox
 deathcoxj
 deathcoxo
@@ -586,6 +585,7 @@ discmate
 discmon
 dmv
 dodo
+dolphinm
 downhill
 downhillu
 dpb7000
@@ -940,6 +940,7 @@ ht1080z
 ht1080z2
 ht12a
 ht18c
+ht280
 hwparty
 hx10
 hx10d
@@ -1167,7 +1168,6 @@ magimaskc
 magtcha5
 magtcha5a
 magtouch
-mahg156
 maletmad
 manager
 map1010
@@ -1224,7 +1224,6 @@ mc68000
 mcword
 mcword_de
 md4duvc
-mdhh100
 mdhorse
 mechatt
 mechattj
@@ -1348,9 +1347,7 @@ monopolyd
 monspdr
 motoxgo
 motoxgov1a
-motoxgov1a2
 motoxgov2a
-motoxgov2a2
 mpc10
 mpc100
 mpc1600
@@ -1367,6 +1364,8 @@ mpc900
 mpc900gx
 mpf1_88
 mpf2
+mpntball
+mpntbalt
 mprof3
 mpu9088vf
 mpx16
@@ -1536,7 +1535,6 @@ palmvx
 palmz22
 panicprk
 panicprkj
-panicprkj2
 partygrs
 partygrsa
 partygrsb
@@ -1765,6 +1763,7 @@ prof181x
 prof80
 profpc33
 prolite286
+prophet2
 proteus
 przonegd
 psi98
@@ -1778,6 +1777,7 @@ psion3a2_us
 psion3c
 psion3mx
 psion3mx_fr
+psion3mx_nl
 psion3s
 psion5mx
 psionhc100
@@ -1895,6 +1895,7 @@ scamp386sx
 scrabble
 scrabbled
 scsxaio
+se3010
 segaai
 segacd
 segacd2
@@ -2120,6 +2121,7 @@ terabrstj
 terabrstja
 terabrstua
 teradrive
+teradrive3
 tesa6240
 tg16
 thinkpad600e
