--- a/00-databases-00/sorted_info_creation/0XXX/samples.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/samples.ini
@@ -27,7 +27,6 @@ ballbomb
 bbcb
 bbcbp
 bbcm
-bbcmc
 blasto
 blkrhino
 blockade
@@ -160,6 +159,7 @@ nsub
 nsubc
 ozmawars
 ozmawars2
+ozmawars3
 ozmawarsmr
 panic
 panic2
@@ -182,6 +182,7 @@ rallyxa
 rallyxeg
 rallyxm
 rallyxmr
+rallyxtd
 redbird
 redclash
 redclashs
