update man created ini files (mame0280)

--- a/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
@@ -12,6 +12,7 @@ carled99
 cmpmx10
 cmpmx11
 cybar120
+d12power
 dgun2573
 dgun2953
 dgun2959
@@ -26,6 +27,7 @@ fcpocket
 fordrace
 ga888
 gamezn2
+gon100
 gprnrs1
 gprnrs16
 gujtv108
@@ -33,7 +35,6 @@ hotwhls
 ii32in1
 ii8in1
 intact89
-intg5410
 itvg49
 lexiseal
 lexizeus
@@ -46,7 +47,6 @@ m521neo
 majkon
 marc101
 marc250
-mc_105te
 mc_110cb
 mc_138cb
 mc_7x6ss
@@ -59,11 +59,9 @@ mc_cb280
 mc_dcat8
 mc_dg101
 mc_dgear
-mc_hh210
 mc_sam60
 mc_sp69
 mc_tv200
-megapad
 mgt20in1
 miwi2_7
 mpntball
@@ -84,6 +82,7 @@ pdc200
 pdc30p
 pdc40t
 pdc50
+pdcj
 pgs268
 pjoyn50
 pjoys30
@@ -92,12 +91,12 @@ ppgc200g
 racechl8
 ragc153
 react
-reactmd
 rhhc152
 rminitv
 rocksock
-sarc110
+spidm2
 sudopptv
+supr200
 supreme
 swclone
 sy888b
@@ -107,6 +106,7 @@ taitons2
 tak_geig
 tak_wdg
 techni4
+tiger108
 timetp36
 tmntmutm
 tmntpdc
