update man created ini files (mame0280) re-add fix

--- a/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
@@ -35,6 +35,7 @@ hotwhls
 ii32in1
 ii8in1
 intact89
+intg5410
 itvg49
 lexiseal
 lexizeus
@@ -47,6 +48,7 @@ m521neo
 majkon
 marc101
 marc250
+mc_105te
 mc_110cb
 mc_138cb
 mc_7x6ss
@@ -59,9 +61,11 @@ mc_cb280
 mc_dcat8
 mc_dg101
 mc_dgear
+mc_hh210
 mc_sam60
 mc_sp69
 mc_tv200
+megapad
 mgt20in1
 miwi2_7
 mpntball
@@ -91,9 +95,11 @@ ppgc200g
 racechl8
 ragc153
 react
+reactmd
 rhhc152
 rminitv
 rocksock
+sarc110
 spidm2
 sudopptv
 supr200
